--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+    <link rel="stylesheet" href="C:\Users\franc\documents\nyu\digiskills\css\styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
 </head>
-
 <body>
     <H1>
         My Portfolio
     </H1>
+  </body>
+<div> <h2>frances andrea</h2></div>
+<hr></hr>
+<p>My <i>favorite</i> thing about programming is the possibility of creating or supporting tools for change through problem solving and design. 
+   </p>
+   <h3>About Me</h3>
+        
+   <p>I'm baby stumptown esse live-edge celiac tilde poke. Pabst williamsburg yr fam ut gastropub. Dolor ipsum salvia, pickled ea tilde yr cornhole meditation single-origin coffee ethical mollit flannel. Sunt sartorial sint single-origin coffee godard. 8-bit banjo lorem pabst truffaut sunt.
+    <br>  
+    Chartreuse four loko flannel artisan taxidermy. Incididunt narwhal voluptate banjo exercitation locavore culpa raclette meh cray jean shorts aesthetic freegan kitsch. Subway tile echo park in mollit. Air plant retro lomo, enamel pin ethical glossier pug pop-up elit.
+    <br>   
+    Truffaut dolor fashion axe celiac etsy quinoa post-ironic roof party eiusmod organic cold-pressed hammock laborum VHS kickstarter. Banh mi fingerstache subway tile health goth vaporware roof party. Cupidatat freegan trust fund excepteur 90's kitsch. Lyft umami migas edison bulb ut id mustache austin in authentic master cleanse shaman.
+    <br>   
+    Aliquip laborum four loko dolor, typewriter et pug venmo organic. Hot chicken voluptate raw denim et, coloring book occupy selfies blog brooklyn irony adaptogen poutine. Tattooed wayfarers do schlitz culpa DIY. Poke lyft hell of, disrupt 8-bit af hammock organic. Hella subway tile typewriter squid, etsy single-origin coffee mlkshk tofu before they sold out tumeric ad DIY trust fund affogato church-key.
+    <br>  
+    Mixtape microdosing narwhal disrupt copper mug quis beard raclette pork belly deep v four dollar toast pour-over edison bulb in. Master cleanse literally enim vexillologist godard swag aliquip crucifix taxidermy. Jianbing ramps tousled deep v church-key tacos minim disrupt copper mug retro iceland farm-to-table try-hard banh mi. Ad cupidatat art party helvetica fugiat pug activated charcoal aute eiusmod shabby chic.
+    <br> 
+    Dummy text? More like dummy thicc text, amirite?</p>
+    <!-- <div class="square"> -->
+      <div>     
+    <!-- <div style="width: 141px; height: 176px; overflow: hidden"> -->
+    <p style="text-align:center;"><img src= 
+  "https://i.pinimg.com/736x/d5/87/db/d587db753bd5f868feb37771acfe030e--disney-cartoon-drawings-baby-cartoon.jpg"
+                  alt="This is me, I promise. pngmart" width="370" height="376"></p>
+      </div>
+   <h3>My Projects</h3>
+   <ul>
+     <li>Project 1</li>
+     <li>Project 2</li>
+     <li>Project 3</li>
+    </ul>
+    <h3>Contact Me</h3>
+    <ul>
+      <li><b>Phone:</b> 212-222-2222</li>
+      <li><a href="mailto:frances@sheepish.com"><b>Email me!</b></a></p>
+        </li>
+    </ul>
+  </html>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
@@ -32,6 +69,3 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
-</body>
-
-</html>
